Fix pgp overflow

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -30,7 +30,7 @@ a.pgp-info:hover {
 
 #pgp pre {
     padding: 0px;
-    overflow-y: scroll;
+    overflow-x: scroll;
 }
 
 @media all and (max-width: 899px) {
